--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
-<header class="flex justify-center w-[1120px] py-4">
-    <nav>
+<header class="flex justify-center w-full py-4">
+    <nav class="flex justify-between w-[350px] flex-row gap-3">
         <a href="/career">Career</a>
         <a href="/projects">Projects</a>
         <a href="/about">About Me</a>
