--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,44 +1,54 @@
 ---
-import Header from '../components/Header.astro';
+import Header from "../components/Header.astro";
+import "@fontsource-variable/onest";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
 ---
 
-
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<Header />
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Header />
+    <slot />
+  </body>
 </html>
 
-
-
 <style is:global>
-	:root {
-		color: 3c4043;
-	}
-	html {
-		font-family: system-ui, sans-serif;
-	}
-	code {
-	}
+  :root {
+    color: #3c4043;
+    font-weight: 600;
+    font-size: medium;
+  }
+  html {
+    font-family: "Onest Variable", system-ui, sans-serif;
+  }
+  code {
+  }
 
-	body {
-		display: flex;
-		justify-content: center;
-		background-color: #F3F7FE;
-	}
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    row-gap: 80px;
+  }
+
+  body {
+    background-color: #f3f7fe;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
 </style>
