--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/Hero.astro";
+import TechStack from "../components/TechStack.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-			
-	</main>
+<Layout title="Roberto Wong">
+  <main>
+    <Hero />
+    <TechStack />
+  </main>
 </Layout>
