--- a/src/icons/SocialPill.astro
+++ b/src/icons/SocialPill.astro
@@ -1,5 +1,5 @@
 <a
-  class="rounded-full border border-gray-900 flex justify-center items-center gap-x-2 px-2 py-2"
+  class="rounded-full border border-gray-900 flex justify-center items-center gap-x-2 px-2 py-2 hover:scale-110 hover:bg-white/10 transition"
   {...Astro.props}
   target="_blank"
   rel="noopener noreferrer"
