--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,4 +51,12 @@ const { title } = Astro.props;
   h1 {
     font-size: 40px;
   }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
 </style>
