--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
-import TechStack from "../components/TechStack.astro";
+import Projects from "../components/Projects.astro";
 ---
 
 <Layout title="Roberto Wong">
   <main>
     <Hero />
-    <TechStack />
+    <Projects />
   </main>
 </Layout>
