--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,21 +5,29 @@ import SocialPill from "../icons/SocialPill.astro";
 import LinkedIn from "../icons/LinkedIn.astro";
 ---
 
-<section class="flex items-center justify-between flex-row w-[800px] h-[350px]">
+<section
+  class="flex items-center justify-between flex-row md:w-[800px] w-[400px] h-[350px]"
+>
   <section>
-    <div class="flex flex-row"><h1>Hi 👋,</h1></div>
-    <h1>My name is</h1>
-    <h1 style="color: #ff6d7f">Roberto Wong</h1>
-    <h1>I build solutions.</h1>
-    <nav class="flex flex-row gap-x-4">
+    <div class="flex flex-row">
+      <h1 class="md:text-5xl text-2xl">Hi 👋,</h1>
+    </div>
+
+    <h1 class="md:text-5xl text-2xl">My name is</h1>
+    <h1 style="color: #ff6d7f" class="md:text-5xl text-2xl">Roberto Wong</h1>
+    <h1 class="md:text-5xl text-2xl">I build solutions.</h1>
+    <nav class="flex flex-row gap-x-4 pt-3">
       <SocialPill href="https://github.com/tycowong"
-        ><GitHub class="h-6 w-6" />GitHub</SocialPill
+        ><GitHub class="size-4 md:h-6 md:w-6" />GitHub</SocialPill
       >
       <SocialPill href="https://www.linkedin.com/in/roberto-wong-3847571b2/"
-        ><LinkedIn class="h-6 w-6" />LinkedIn</SocialPill
+        ><LinkedIn class="size-4 md:h-6 md:w-6" />LinkedIn</SocialPill
       >
     </nav>
   </section>
 
-  <img src="https://unavatar.io/github/tycowong" class="rounded-full size-72" />
+  <img
+    src="https://unavatar.io/github/tycowong"
+    class="rounded-full md:size-72 size-40"
+  />
 </section>
