--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -3,7 +3,7 @@ const { projectName, description } = Astro.props;
 ---
 
 <section
-  class="flex shadow-gray-400 shadow-2xl flex-col w-[258px] h-[400px] bg-white rounded-xl hover:scale-110 hover:shadow-red-300 transition"
+  class="flex shadow-gray-400 shadow-2xl flex-col w-[258px] h-[400px] bg-white rounded-xl hover:scale-110 hover:shadow-red-300 transition duration-500 ease-in-out"
 >
   <img
     class="size-fit rounded-t-xl"
