--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -3,7 +3,7 @@ const { class: className } = Astro.props;
 ---
 
 <section
-  class=`flex justify-center w-[800px] flex-col items-center ${className}`
+  class=`flex justify-center xl:w-[800px] flex-col items-center ${className}`
 >
   <slot />
 </section>
