fixed Projects reactiveness

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,11 +8,8 @@ import LinkedIn from "../icons/LinkedIn.astro";
 <section
   class="flex items-center justify-between flex-row md:w-[800px] w-[400px] h-[350px]"
 >
-  <section>
-    <div class="flex flex-row">
-      <h1 class="md:text-5xl text-2xl">Hi 👋,</h1>
-    </div>
-
+  <section class="flex flex-col gap-y-2">
+    <h1 class="md:text-5xl text-2xl">Hi 👋,</h1>
     <h1 class="md:text-5xl text-2xl">My name is</h1>
     <h1 style="color: #ff6d7f" class="md:text-5xl text-2xl">Roberto Wong</h1>
     <h1 class="md:text-5xl text-2xl">I build solutions.</h1>
