--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,27 +1,29 @@
 ---
-import TailwindConfig from "../../tailwind.config";
-import Expo from "../icons/Expo.astro";
-import Python from "../icons/Python.astro";
-import TailWind from "../icons/TailWind.astro";
-import React from "../icons/React.astro";
 import ProjectCard from "./ProjectCard.astro";
+import SectionContainer from "./SectionContainer.astro";
 ---
 
-<section class="flex justify-center w-[800px] flex-col items-center">
-  <h1>Projects</h1>
-  <h2>What I've build so far</h2>
-  <div class="flex flex-row m-10 align-center justify-center gap-x-8">
-    <ProjectCard
-      projectName="Project Title"
-      description="Here type a really short description, remember KISS."
-    />
-    <ProjectCard
-      projectName="Project Title"
-      description="Here type a really short description, remember KISS."
-    />
-    <ProjectCard
-      projectName="Project Title"
-      description="Here type a really short description, remember KISS."
-    />
-  </div>
-</section>
+<SectionContainer>
+  <section class="flex justify-center flex-col items-center">
+    <h1>Projects</h1>
+    <h2>What I've build so far</h2>
+    <div class="flex flex-row flex-wrap m-10 align-center justify-center gap-8">
+      <ProjectCard
+        projectName="Project Title"
+        description="Here type a really short description, remember KISS."
+      />
+      <ProjectCard
+        projectName="Project Title"
+        description="Here type a really short description, remember KISS."
+      />
+      <ProjectCard
+        projectName="Project Title"
+        description="Here type a really short description, remember KISS."
+      />
+      <ProjectCard
+        projectName="Project Title"
+        description="Here type a really short description, remember KISS."
+      />
+    </div>
+  </section>
+</SectionContainer>
