--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import Projects from "../components/Projects.astro";
-import SectionContainer from "../components/SectionContainer.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="Roberto Wong">
   <main>
     <Hero />
     <Projects />
-    <SectionContainer />
+    <Footer />
   </main>
 </Layout>
