Fixed gap y axis issue in Hero

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,13 +6,13 @@ import LinkedIn from "../icons/LinkedIn.astro";
 ---
 
 <section
-  class="flex items-center justify-between flex-row md:w-[800px] w-[400px] h-[350px]"
+  class="flex items-center justify-between p-1 flex-row md:w-[800px] w-[400px] h-[350px]"
 >
-  <section class="flex flex-col gap-y-2">
-    <h1 class="md:text-5xl text-2xl">Hi 👋,</h1>
-    <h1 class="md:text-5xl text-2xl">My name is</h1>
-    <h1 style="color: #ff6d7f" class="md:text-5xl text-2xl">Roberto Wong</h1>
-    <h1 class="md:text-5xl text-2xl">I build solutions.</h1>
+  <section class="flex flex-col md:gap-y-2">
+    <h1 class="md:text-5xl text-3xl">Hi 👋,</h1>
+    <h1 class="md:text-5xl text-3xl">My name is</h1>
+    <h1 style="color: #ff6d7f" class="md:text-5xl text-3xl">Roberto Wong</h1>
+    <h1 class="md:text-5xl text-3xl">I build solutions.</h1>
     <nav class="flex flex-row gap-x-4 pt-3">
       <SocialPill href="https://github.com/tycowong"
         ><GitHub class="size-4 md:h-6 md:w-6" />GitHub</SocialPill
