Fixed Reactive design for mobile

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import LinkedIn from "../icons/LinkedIn.astro";
 ---
 
 <section
-  class="flex items-center justify-between p-1 flex-row md:w-[800px] w-[400px] h-[350px]"
+  class="flex items-center flex-col justify-between p-1 mt-10 gap-y-10 md:flex-row md:w-[800px] w-[400px] md:h-[350px]"
 >
   <section class="flex flex-col md:gap-y-2">
     <h1 class="md:text-5xl text-3xl">Hi 👋,</h1>
@@ -25,6 +25,6 @@ import LinkedIn from "../icons/LinkedIn.astro";
 
   <img
     src="https://unavatar.io/github/tycowong"
-    class="rounded-full md:size-72 size-40"
+    class="md:rounded-full rounded-xl md:size-72 size-64"
   />
 </section>
