--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -3,27 +3,25 @@ import ProjectCard from "./ProjectCard.astro";
 import SectionContainer from "./SectionContainer.astro";
 ---
 
-<SectionContainer>
-  <section class="flex justify-center flex-col items-center">
-    <h1>Projects</h1>
-    <h2>What I've build so far</h2>
-    <div class="flex flex-row flex-wrap m-10 align-center justify-center gap-8">
-      <ProjectCard
-        projectName="Project Title"
-        description="Here type a really short description, remember KISS."
-      />
-      <ProjectCard
-        projectName="Project Title"
-        description="Here type a really short description, remember KISS."
-      />
-      <ProjectCard
-        projectName="Project Title"
-        description="Here type a really short description, remember KISS."
-      />
-      <ProjectCard
-        projectName="Project Title"
-        description="Here type a really short description, remember KISS."
-      />
-    </div>
-  </section>
+<SectionContainer class="flex justify-center flex-col items-center">
+  <h1>Projects</h1>
+  <h2>What I've build so far</h2>
+  <div class="flex flex-row flex-wrap m-10 align-center justify-center gap-8">
+    <ProjectCard
+      projectName="Project Title"
+      description="Here type a really short description, remember KISS."
+    />
+    <ProjectCard
+      projectName="Project Title"
+      description="Here type a really short description, remember KISS."
+    />
+    <ProjectCard
+      projectName="Project Title"
+      description="Here type a really short description, remember KISS."
+    />
+    <ProjectCard
+      projectName="Project Title"
+      description="Here type a really short description, remember KISS."
+    />
+  </div>
 </SectionContainer>
