Added new mobile design and Experience

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,26 +5,26 @@ const EXPERIENCIE = [
     date: "Current",
     title: "UX Research Operations Specialist",
     company: "HP",
-    description: `Develop python scripts to filter a pool of target participants from HP’s database of hundreds of participants based on criterias set by researchers. \nImprove daily researcher work and experience by solving technical issues and creating bridges between research tools.`,
+    description: `Improve daily researcher work and experience by solving technical issues and creating bridges between research tools. Enabled the successful execution of 6 in-person studies by coaching and supporting researchers across the US and Asia with A/V equipment, streaming, and providing data collection best practices.`,
   },
   {
     date: "April 2023",
     title: "UX Research Lab Technician",
     company: "HP",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Automated HP's customer recruitment process by leveraging python scripts and internal O365 tools (Power Automate, Power BI, Sharepoint Lists, etc.) to coordinate the signing of legal forms and scheduling, reducing recruitment times from 2 weeks to 2 hours.",
   },
   {
     date: "December 2023",
     title: "Apple Pro Advanced Repair Agent",
     company: "Geek Squad",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Work on Apple products as an authorized repair store by replacing screens, back glass, running diagnostics using Apple authorized tools. Coaching and Advising the Repair Agents team on Apple hardware and software repairs.",
   },
 ];
 ---
 
-<ol class="relative mt-16">
+<ol class="relative">
   {
     EXPERIENCIE.map((experiencie) => (
       <li class="">
