--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -13,26 +13,22 @@ const { title, company, description, link, date } = Astro.props;
 ---
 
 <div
-  class="relative mx-12 pb-12 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4]"
+  class="relative mx-12 pb-12 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 border-black before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4]"
 >
   <div class="relative pb-12 md:col-span-2">
     <div class="sticky top-0">
-      <span class="text-yellow-400 -left-[42px] absolute rounded-full text-5xl"
+      <span class="text-purple-500 -left-[42px] absolute rounded-full text-5xl"
         >&bull;</span
       >
 
-      <h3 class="text-xl font-bold text-yellow-400">{title}</h3>
-      <h4 class="font-semibold text-xl text-gray-600 dark:text-white">
+      <h3 class="text-xl font-bold text-[#ff6d7f] mb-2">{title}</h3>
+      <h4 class="font-semibold text-xl text-[#3c4043]">
         {company}
       </h4>
-      <time class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80"
-        >{date}</time
-      >
+      <time class="p-0 m-0 text-sm text-gray-500">{date}</time>
     </div>
   </div>
-  <div
-    class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3"
-  >
+  <div class="relative flex flex-col gap-2 pb-4 text-[#3c4043] md:col-span-3">
     {description}
     {
       link && (
