--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,26 +5,22 @@ import SocialPill from "../icons/SocialPill.astro";
 import LinkedIn from "../icons/LinkedIn.astro";
 ---
 
-<section
-  class="flex items-center flex-col justify-between p-1 mt-10 gap-y-10 md:flex-row md:w-[800px] w-[400px] md:h-[350px]"
->
-  <section class="flex flex-col md:gap-y-2">
-    <h1 class="md:text-5xl text-3xl">Hi 👋,</h1>
-    <h1 class="md:text-5xl text-3xl">My name is</h1>
-    <h1 style="color: #ff6d7f" class="md:text-5xl text-3xl">Roberto Wong</h1>
-    <h1 class="md:text-5xl text-3xl">I build solutions.</h1>
-    <nav class="flex flex-row gap-x-4 pt-3">
-      <SocialPill href="https://github.com/tycowong"
-        ><GitHub class="size-4 md:h-6 md:w-6" />GitHub</SocialPill
-      >
-      <SocialPill href="https://www.linkedin.com/in/roberto-wong-3847571b2/"
-        ><LinkedIn class="size-4 md:h-6 md:w-6" />LinkedIn</SocialPill
-      >
-    </nav>
-  </section>
-
-  <img
-    src="https://unavatar.io/github/tycowong"
-    class="md:rounded-full rounded-xl md:size-72 size-64"
-  />
+<section class="flex flex-col md:gap-y-2">
+  <h1 class="md:text-5xl text-5xl">Hi 👋,</h1>
+  <h1 class="md:text-5xl text-5xl">My name is</h1>
+  <h1 style="color: #ff6d7f" class="md:text-5xl text-5xl">Roberto Wong</h1>
+  <h1 class="md:text-5xl text-5xl">I build solutions.</h1>
+  <nav class="flex flex-row gap-x-4 pt-3">
+    <SocialPill href="https://github.com/tycowong"
+      ><GitHub class="size-6" />GitHub</SocialPill
+    >
+    <SocialPill href="https://www.linkedin.com/in/roberto-wong-3847571b2/"
+      ><LinkedIn class="size-6" />LinkedIn</SocialPill
+    >
+  </nav>
 </section>
+
+<img
+  src="https://unavatar.io/github/tycowong"
+  class="md:rounded-full rounded-xl md:size-72 size-96 shadow-red-400 shadow-2xl"
+/>
