--- a/src/icons/SocialPill.astro
+++ b/src/icons/SocialPill.astro
@@ -1,5 +1,5 @@
 <a
-  class="rounded-full border border-gray-900 flex justify-center items-center gap-x-1 md:gap-x-2 p-1 md:px-2 md:py-2 hover:scale-110 hover:bg-white/10 transition text-xs md:text-sm"
+  class="rounded-full border border-gray-900 flex justify-center items-center gap-x-2 p-1 px-2 md:py-2 hover:scale-110 hover:bg-white/10 transition text-xs md:text-sm"
   {...Astro.props}
   target="_blank"
   rel="noopener noreferrer"
