--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,10 @@ import Header from "../components/Header.astro";
 import "@fontsource-variable/onest";
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { description, title } = Astro.props;
 ---
 
 <!doctype html>
@@ -13,7 +14,7 @@ const { title } = Astro.props;
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content=`${description}` />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
