--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,10 @@ import Experience from "../components/Experience.astro";
 import BriefCaseIcon from "../icons/BriefCaseIcon.astro";
 ---
 
-<Layout title="Roberto Wong">
+<Layout
+  description="Learn about the solutions I've made while working on diferent proyects I've contribuited."
+  title="Portafolio de Roberto Wong - Developer and "
+>
   <main>
     <SectionContainer
       class="flex items-center flex-col justify-between p-1 mt-10 gap-y-10 md:flex-row md:w-[850px] w-[400px] md:h-[350px]"
@@ -18,7 +21,7 @@ import BriefCaseIcon from "../icons/BriefCaseIcon.astro";
     <SectionContainer class="md:w-[850px] flex-col justify-start gap-y-10">
       <div class="flex flex-row items-center justify-start gap-x-3">
         <BriefCaseIcon class="size-9" />
-        <h1>Carrer</h1>
+        <h1>Career</h1>
       </div>
       <Experience />
     </SectionContainer>
