--- a/src/icons/SocialPill.astro
+++ b/src/icons/SocialPill.astro
@@ -1,5 +1,5 @@
 <a
-  class="rounded-full border hover:shadow-red-300 hover:shadow-lg hover:bg-red-100/10 border-gray-900 flex justify-center items-center gap-x-2 p-1 px-2 md:py-2 hover:scale-110 hover:bg-white/10 transition duration-200 text-xs md:text-sm"
+  class="rounded-full border hover:shadow-red-300 hover:shadow-lg hover:bg-red-100/10 border-gray-900 flex justify-center items-center gap-x-2 p-1 px-2 md:py-2 hover:scale-110 transition duration-200 text-xs md:text-sm"
   {...Astro.props}
   target="_blank"
   rel="noopener noreferrer"
