--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -2,6 +2,6 @@
 const { id, class: className } = Astro.props;
 ---
 
-<section id={id} class=`flex md:w-[1000px] w-[400px] ${className}`>
+<section id={id} class=`flex md:w-[1000px] pt-10 w-[400px] ${className}`>
   <slot />
 </section>
