--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,4 @@
 ---
-import Badge from "./Badge.astro";
 import GitHub from "../icons/GitHub.astro";
 import SocialPill from "../icons/SocialPill.astro";
 import LinkedIn from "../icons/LinkedIn.astro";
@@ -22,5 +21,5 @@ import LinkedIn from "../icons/LinkedIn.astro";
 
 <img
   src="https://unavatar.io/github/tycowong"
-  class="md:rounded-full rounded-xl md:size-72 size-96 shadow-red-400 shadow-2xl"
+  class="md:rounded-full rounded-xl md:size-72 size-96 shadow-red-400 shadow-2xl shadow-"
 />
