created json files for projects and changed design

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,7 +59,7 @@
 
   @keyframes nav-shadown {
     to {
-      @apply shadow-sm ring-1 font-bold bg-slate-300/20 dark:bg-gray-800/80 shadow-md shadow-red-300/50 border-gray-900 border-[1px] ring-white/10;
+      @apply ring-1 font-bold bg-slate-300/20 dark:bg-gray-800/80 shadow-md shadow-red-300/50 border-gray-900 border-[1px] ring-white/10;
     }
   }
 </style>
