--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -3,22 +3,39 @@ interface Props {
   photoUrl: string;
   projectName: string;
   description: string;
+  pageUrl: string;
+  transitionName: string;
   react?: boolean;
   astro?: boolean;
   tailwind?: boolean;
   expo?: boolean;
 }
 
-const { photoUrl, projectName, description, react, astro, tailwind, expo } =
-  Astro.props;
+const {
+  photoUrl,
+  projectName,
+  description,
+  react,
+  astro,
+  tailwind,
+  expo,
+  pageUrl,
+  transitionName,
+} = Astro.props;
 ---
 
-<section
-  class="flex shadow-gray-400 shadow-2xl flex-col w-[258px] h-[400px] bg-white rounded-xl hover:scale-110 hover:shadow-red-300 transition duration-500 ease-in-out"
->
-  <img class="size-fit rounded-t-xl" src=`${photoUrl}` />
-  <div class="p-3">
-    <h2 class="mb-2">{projectName}</h2>
-    <h3>{description}</h3>
-  </div>
-</section>
+<a href=`${pageUrl}`>
+  <section
+    class="flex shadow-gray-400 shadow-2xl flex-col w-[400px] h-[400px] bg-white rounded-xl hover:scale-110 hover:shadow-red-300 transition duration-500 ease-in-out"
+  >
+    <img
+      transition:name=`${transitionName}`
+      class="size-fit rounded-t-xl"
+      src=`${photoUrl}`
+    />
+    <div class="p-3">
+      <h2 class="mb-2">{projectName}</h2>
+      <h3>{description}</h3>
+    </div>
+  </section>
+</a>
