--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,4 +1,7 @@
 ---
+import { Image } from "astro:assets";
+import type { ImageMetadata } from "astro";
+
 interface Props {
   photoUrl: string;
   projectName: string;
@@ -10,7 +13,6 @@ interface Props {
   tailwind?: boolean;
   expo?: boolean;
 }
-
 const {
   photoUrl,
   projectName,
@@ -22,16 +24,26 @@ const {
   pageUrl,
   transitionName,
 } = Astro.props;
+
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "/src/projects/images/*.{jpeg,jpg,png,gif}"
+);
+
+if (!images[photoUrl])
+  throw new Error(
+    `"${photoUrl}" does not exist in glob: "/src/projects/images/*.{jpeg,jpg,png,gif}"`
+  );
 ---
 
 <a href=`${pageUrl}`>
   <section
     class="flex shadow-gray-400 shadow-2xl flex-col w-[400px] h-[400px] bg-white rounded-xl hover:scale-110 hover:shadow-red-300 transition duration-500 ease-in-out"
   >
-    <img
+    <Image
       transition:name=`${transitionName}`
       class="size-fit rounded-t-xl"
-      src=`${photoUrl}`
+      alt="yolo"
+      src={images[photoUrl]()}
     />
     <div class="p-3">
       <h2 class="mb-2">{projectName}</h2>
