cahnged project json file to separate md files

--- a/src/components/ProjectHero.astro
+++ b/src/components/ProjectHero.astro
@@ -2,26 +2,16 @@
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 interface Props {
-  source: string;
+  img: string;
   alt: string;
-  transitionName: string;
 }
 
-const { source, alt, transitionName } = Astro.props;
-
-const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/projects/images/*.{jpeg,jpg,png,gif}"
-);
-
-if (!images[source])
-  throw new Error(
-    `"${source}" does not exist in glob: "/src/projects/images/*.{jpeg,jpg,png,gif}"`
-  );
+const { img, alt } = Astro.props;
 ---
 
-<Image
-  src={images[source]()}
+<img
+  src=`imgaes/${img}`
   alt=`${alt}`
   class="w-[548px] h-[360px] rounded-md"
-  transition:name=`${transitionName}`
+  transition:name=`img-${img}`
 />
