--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,53 +1,32 @@
 ---
-import { Image } from "astro:assets";
-import type { ImageMetadata } from "astro";
-
 interface Props {
-  photoUrl: string;
-  projectName: string;
-  description: string;
-  pageUrl: string;
-  transitionName: string;
+  name: string;
+  img: string;
+  sm_description: string;
+  slug: string;
   react?: boolean;
   astro?: boolean;
   tailwind?: boolean;
   expo?: boolean;
 }
-const {
-  photoUrl,
-  projectName,
-  description,
-  react,
-  astro,
-  tailwind,
-  expo,
-  pageUrl,
-  transitionName,
-} = Astro.props;
+const { name, img, sm_description, react, astro, tailwind, expo } = Astro.props;
 
-const images = import.meta.glob<{ default: ImageMetadata }>(
-  "/src/projects/images/*.{jpeg,jpg,png,gif}"
-);
-
-if (!images[photoUrl])
-  throw new Error(
-    `"${photoUrl}" does not exist in glob: "/src/projects/images/*.{jpeg,jpg,png,gif}"`
-  );
+console.log(name);
 ---
 
-<a href=`${pageUrl}`>
+<a href=`/projects/${img}`>
   <section
     class="flex shadow-gray-400 shadow-2xl flex-col w-[400px] h-[400px] bg-white rounded-xl hover:scale-110 hover:shadow-red-300 transition duration-500 ease-in-out"
   >
-    <Image
-      transition:name=`${transitionName}`
+    <img
+      transition:name=`img-${img}`
       class="size-fit rounded-t-xl"
       alt="yolo"
-      src={images[photoUrl]()}
+      src=`images/${img}`
     />
     <div class="p-3">
-      <h2 class="mb-2">{projectName}</h2>
-      <h3>{description}</h3>
+      <h2 class="mb-2">{name}</h2>
+      <h3>{sm_description}</h3>
     </div>
   </section>
 </a>
