--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,13 +1,27 @@
 ---
 import ProjectCard from "./ProjectCard.astro";
+import { getCollection } from "astro:content";
+const PROJECTS = await getCollection("projects");
 
-import projects from "../projects/projects.json";
-
-const PROJECTS = projects.project;
+console.log(PROJECTS);
 ---
 
 <h1>Projects</h1>
 <h2>What I've build so far</h2>
 <div class="flex flex-row flex-wrap m-10 align-center justify-center gap-8">
-  {PROJECTS.map((project) => <ProjectCard {...project} />)}
+  {
+    PROJECTS.map((project: { slug: any; data: any }) => {
+      const { slug, data } = project;
+      const { name, img, sm_description } = data;
+
+      return (
+        <ProjectCard
+          slug={slug}
+          name={name}
+          img={img}
+          sm_description={sm_description}
+        />
+      );
+    })
+  }
 </div>
