added dinamic pagination

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,10 +5,12 @@ import LinkedIn from "../icons/LinkedIn.astro";
 ---
 
 <section class="flex flex-col md:gap-y-2">
-  <h1 class="md:text-5xl text-5xl">Hi 👋,</h1>
-  <h1 class="md:text-5xl text-5xl">My name is</h1>
-  <h1 style="color: #ff6d7f" class="md:text-5xl text-5xl">Roberto Wong</h1>
-  <h1 class="md:text-5xl text-5xl">I build solutions.</h1>
+  <h1 class="md:text-5xl text-5xl font-bold">Hi 👋,</h1>
+  <h1 class="md:text-5xl text-5xl font-bold">My name is</h1>
+  <h1 style="color: #ff6d7f" class="md:text-5xl text-5xl font-bold">
+    Roberto Wong
+  </h1>
+  <h1 class="md:text-5xl text-5xl font-bold">I build solutions.</h1>
   <nav class="flex flex-row gap-x-4 pt-3">
     <SocialPill href="https://github.com/tycowong"
       ><GitHub class="size-6" />GitHub</SocialPill
