--- a/src/components/ProjectHero.astro
+++ b/src/components/ProjectHero.astro
@@ -10,8 +10,8 @@ const { img, alt } = Astro.props;
 ---
 
 <img
-  src=`imgaes/${img}`
+  src=`/images/${img}`
   alt=`${alt}`
-  class="w-[548px] h-[360px] rounded-md"
+  class="rounded-xl m-4"
   transition:name=`img-${img}`
 />
