--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import DocumentIcon from "../icons/DocumentIcon.astro";
       <div class="flex flex-row gap-x-3 justify-between items-center">
         <div class="flex flex-row items-center justify-start gap-x-3">
           <BriefCaseIcon class="size-10" />
-          <h1>Career</h1>
+          <h1 class="">Career</h1>
         </div>
         <nav class="flex flex-row md:mr-11">
           <SocialPill
