--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,12 @@
+---
+import Cottage from "../icons/cottage.astro";
+---
+
 <header class="fixed top-0 z-10 flex justify-center w-full py-4">
   <nav
     class="flex justify-between w-[350px] flex-row gap-3 px-3 text-sm font-medium rounded-full items-center"
   >
+  <a href="/"> <Cottage class="w-5"/></a>
     <a href="#career">Career</a>
     <a href="#projects">Projects</a>
     <a href="#about">About Me</a>
