fixed wrong import name

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Cottage from "../icons/cottage.astro";
+import Cottage from "../icons/Cottage.astro";
 ---
 
 <header class="fixed top-0 z-10 flex justify-center w-full py-4">
