--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,11 +6,11 @@ import Cottage from "../icons/Cottage.astro";
   <nav
     class="flex justify-between w-[350px] flex-row gap-3 px-3 text-sm font-medium rounded-full items-center"
   >
-  <a href="/"> <Cottage class="w-5"/></a>
+    <a href="/"> <Cottage class="w-5" /></a>
     <a href="#career">Career</a>
     <a href="#projects">Projects</a>
     <a href="#about">About Me</a>
-    <a href="#contact">Contact Me</a>
+    <a href="mailto:roberto.wong.lozano@gmail.com">Contact Me</a>
   </nav>
 </header>
 <script>
