Fixed resposiveness in landing page

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,5 +23,5 @@ import LinkedIn from "../icons/LinkedIn.astro";
 
 <img
   src="https://unavatar.io/github/tycowong"
-  class="md:rounded-full rounded-xl md:size-72 size-96 shadow-red-400 shadow-2xl shadow-"
+  class="md:rounded-full rounded-xl size-72 shadow-red-400 shadow-2xl shadow-"
 />
