--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -2,6 +2,9 @@
 const { id, class: className } = Astro.props;
 ---
 
-<section id={id} class=`flex md:w-[1000px] pt-10 w-[400px] ${className}`>
+<section
+  id={id}
+  class=`md:w-[700px] lg:w-[850px] w-[300px] flex md:w-[1000px] pt-10 ${className}`
+>
   <slot />
 </section>
