--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,15 +16,12 @@ import DocumentIcon from "../icons/DocumentIcon.astro";
 >
   <main>
     <SectionContainer
-      class="flex items-center flex-col justify-between p-1 mt-10 gap-y-10 md:flex-row md:w-[850px] w-[400px] md:h-[350px]"
+      class="flex items-center flex-col justify-between mt-10 gap-y-10 md:flex-row"
     >
       <Hero /></SectionContainer
     >
 
-    <SectionContainer
-      id="career"
-      class="md:w-[850px] flex-col justify-start gap-y-10"
-    >
+    <SectionContainer id="career" class="flex-col justify-start gap-y-10">
       <div class="flex flex-row gap-x-3 justify-between items-center">
         <div class="flex flex-row items-center justify-start gap-x-3">
           <BriefCaseIcon class="size-10" />
