--- a/src/components/ProjectHero.astro
+++ b/src/components/ProjectHero.astro
@@ -12,6 +12,6 @@ const { img, alt } = Astro.props;
 <img
   src=`/images/${img}`
   alt=`${alt}`
-  class="rounded-xl m-4"
+  class="rounded-[30px] p-5"
   transition:name=`img-${img}`
 />
