--- a/src/pages/projects/[id].astro
+++ b/src/pages/projects/[id].astro
@@ -63,7 +63,7 @@ const tech = Object.values(TAGS);
 
 <Layout title=`${name}` description=`${name} Project`>
   <section
-    class="flex gap-5 w-full h-full flex-row justify-center flex-wrap mt-14"
+    class="flex gap-5 w-full h-full flex-row justify-center flex-wrap mt-10 md:mt-14 mb-10"
   >
     <ProjectHero img={img} alt={alt} />
     <article class="prose prose-md pl-11 pr-11 mt-4">
