added default sixe for img in ProjecCard

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -18,7 +18,7 @@ const { name, img, sm_description, react, astro, tailwind, expo } = Astro.props;
 >
   <img
     transition:name=`img-${img}`
-    class="size-fit md:w-[400px] rounded-t-xl"
+    class="size-fit w-[400px] rounded-t-xl"
     alt="yolo"
     src=`images/${img}`
   />
