--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -4,7 +4,7 @@ const { id, class: className } = Astro.props;
 
 <section
   id={id}
-  class=`md:w-[700px] lg:w-[850px] w-[300px] flex md:w-[1000px] pt-10 ${className}`
+  class=`sm:w-[600px] md:w-[700px] lg:w-[850px] max-w-max flex md:w-[1000px] pt-10 ${className}`
 >
   <slot />
 </section>
