Added changes to responsiveness

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,10 +14,12 @@ import DocumentIcon from "../icons/DocumentIcon.astro";
   description="Learn about the solutions I've made while working on diferent proyects I've contribuited."
   title="Portafolio de Roberto Wong - Developer and "
 >
-  <main class="pt-20">
+  <main
+    class="flex flex-col items-center justify-center gap-10 md:gap-20 pt-5 sm:pt-20"
+  >
     <SectionContainer
       id="hero"
-      class="items-center flex-col gap-12 sm:gap-10 justify-between mt-10 md:flex-row sm:p-0 p-5"
+      class="items-center flex-col gap-12 sm:gap-10 justify-between md:mt-10 md:flex-row sm:p-0 p-5"
     >
       <Hero />
     </SectionContainer>
