Fixed expeience years and added one more

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -15,11 +15,18 @@ const EXPERIENCIE = [
       "Automated HP's customer recruitment process by leveraging python scripts and internal O365 tools (Power Automate, Power BI, Sharepoint Lists, etc.) to coordinate the signing of legal forms and scheduling, reducing recruitment times from 2 weeks to 2 hours.",
   },
   {
-    date: "December 2023",
+    date: "December 2021",
     title: "Apple Pro Advanced Repair Agent",
     company: "Geek Squad",
     description:
       "Work on Apple products as an authorized repair store by replacing screens, back glass, running diagnostics using Apple authorized tools. Coaching and Advising the Repair Agents team on Apple hardware and software repairs.",
+  },
+  {
+    date: "December 2016",
+    title: "Apple Pro Computer and Mobile",
+    company: "BestBuy",
+    description:
+      "Create solutions for customers needs and work directly with an Apple ASC to meet and exeed bussiness needs.",
   },
 ];
 ---
